testdata/baselines/reference/submodule/compiler/controlFlowAutoAccessor1.errors.txt
controlFlowAutoAccessor1.ts(2,12): error TS7008: Member 'test' implicitly has an 'any' type.
controlFlowAutoAccessor1.ts(14,12): error TS7008: Member 'test' implicitly has an 'any' type.
controlFlowAutoAccessor1.ts(31,12): error TS7008: Member 'value' implicitly has an 'any' type.
controlFlowAutoAccessor1.ts(44,19): error TS7008: Member 'value' implicitly has an 'any' type.
controlFlowAutoAccessor1.ts(54,19): error TS7008: Member 'value' implicitly has an 'any' type.


==== controlFlowAutoAccessor1.ts (5 errors) ====
    class Example {
      accessor test;
               ~~~~
!!! error TS7008: Member 'test' implicitly has an 'any' type.
    
      constructor(test: number) {
        this.test = test;
      }
    
      getTest() {
        return this.test;
      }
    }
    
    class Example2 {
      accessor test;
               ~~~~
!!! error TS7008: Member 'test' implicitly has an 'any' type.
    
      constructor(test: number | undefined) {
        this.test = test;
      }
    
      getTest() {
        if (this.test) {
          return this.test;
        }
        return 0;
      }
    }
    
    // https://github.com/microsoft/TypeScript/issues/59728
    
    class Example3 {
      accessor value;
               ~~~~~
!!! error TS7008: Member 'value' implicitly has an 'any' type.
    
      constructor(n: number) {
        this.value = n;
    
        if (n < 0) {
          this.value = null;
        }
      }
    }
    
    declare var n: number;
    class Example4 {
      static accessor value;
                      ~~~~~
!!! error TS7008: Member 'value' implicitly has an 'any' type.
      static {
        this.value = n;
        if (n < 0) {
          this.value = null;
        }
      }
    }
    
    class Example5 {
      static accessor value; // error
                      ~~~~~
!!! error TS7008: Member 'value' implicitly has an 'any' type.
    }
    Example5.value = 123;
    Example5.value++;
    